# cryptocoynwallet

./: CMakeLists.txt  CryptoNoteWallet.cmake  README.md
src/: CommandLineParser.cpp  CommandLineParser.h  CryptoCoynWalletConfig.h.in  CryptoNoteWrapper.cpp  CryptoNoteWrapper.h  CurrencyAdapter.cpp  CurrencyAdapter.h  LoggerAdapter.cpp  LoggerAdapter.h  NodeAdapter.cpp  NodeAdapter.h  Settings.cpp  Settings.h  SignalHandler.cpp  SignalHandler.h  WalletAdapter.cpp  WalletAdapter.h  cryptonotewallet.rc  main.cpp  miniupnpcstrings.h  resources.qrc
src/gui/ui/: aboutdialog.ui  mainwindow.ui
